SERVER-38467 do not block interruption when cleaning up temp collection from rename